# Analysis_Suite

./: .buildinfo  .gitignore  .gitmodules  README.md  analysis_suite.BDT_utilities.html  analysis_suite.Plotting.html  analysis_suite.commons.html  analysis_suite.html  analyze.py  bin_packing.py  code.html  condor.sub  condor_job.sh  create_info_file.sh  farmoutJob.sh  fitDiagnostics.py  genindex.html  get_files_hdfs.sh  hyperopt.py  index.html  inputs.py  inputs_default.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  runMVA.py  run_suite.py  running.html  search.html  searchindex.js  send_condor.py  test.py
.circleci/: config.yml
Analyzer/: Common.py  CutApplier.py  Process.py  Scheduler.py  __init__.py  analyze_task.py  apply_task.py  job_main.py  task_holder.py
Analyzer/ThreeTop/: ThreeTop_2016.py  ThreeTop_2017.py  ThreeTop_2018.py  ThreeTop_Electron.py  ThreeTop_Event.py  ThreeTop_Jets.py  ThreeTop_Muon.py  __init__.py
Analyzer/interface/: BEfficiency.h  Bar.h  BaseSelector.h  CommonEnums.h  CommonFuncs.h  CommonStructs.h  Electron.h  FakeRate.h  GenParticle.h  Jet.h  JetCorrection.h  Lepton.h  Lepton_MisId_Closure.h  Met.h  Muon.h  Nonprompt_Closure.h  Output.h  Output.hxx  Particle.h  PrescaleProvider.h  ResolvedTop.h  ScaleFactors.h  Systematic.h  SystematicMaker.h  ThreeTop.h  Variable.h  logging.h
Analyzer/python/: Common.py  analyze_task.py  apply_task.py  job_main.py
Analyzer/scripts/: create_lists.py  era_hadd.py  farmoutJob.py  hadd.py  resubmit.py
Analyzer/src/: BEfficiency.cpp  Bar.cc  BaseSelector.cc  BuildFile.xml  CommonFuncs.cc  CommonStructs.cpp  Electron.cc  FakeRate.cc  GenParticle.cpp  Jet.cc  JetCorrection.cc  Lepton.cc  Lepton_MisId_Closure.cc  Met.cc  Muon.cc  Nonprompt_Closure.cc  Output.cpp  Particle.cc  ResolvedTop.cc  RoccoR.cc  ScaleFactors.cpp  Systematic.cpp  SystematicMaker.cpp  ThreeTop.cc  classes.h  classes_def.xml  loguru.cpp
BDT_utilities/: MVAPlotter.py  MvaMaker.py  job_main.py
BDT_utilities/python/: CutBased.py  DNN.py  MVAPlotter.py  MvaMaker.py  TMVA.py  XGBoost.py  data_processor.py  dataholder.py  job_main.py
Combine/: setup_combine.py
Combine/python/: card_maker.py  hist_writer.py  histogram_creater.py  job_main.py
Combine/scripts/: combine.py
Plotting/: job_main.py  pyPad.py  stack.py
Plotting/python/: LogFile.py  configHelper.py  job_main.py  plotter.py  pyPad.py  stack.py
Root_Analysis/interface/: BaseSelector.h  CommonEnums.h  Electron.h  Jet.h  Lepton.h  Muon.h  Particle.h  ThreeTop.h
Root_Analysis/src/: BaseSelector.cc  Electron.cc  Jet.cc  Lepton.cc  Muon.cc  Particle.cc  ThreeTop.cc  classes.h  classes_def.xml
ScaleFactors/: calculatePileupSF.py  getDataPileup.py
Utilities/: UprootWriter.py  configHelper.py
Variable_Creator/python/: basegetter.py  data_processor.py  flatgetter.py  job_main.py  vargetter.py  vargetter2.py
_modules/: index.html
_sources/: analysis_suite.BDT_utilities.rst.txt  analysis_suite.Plotting.rst.txt  analysis_suite.commons.rst.txt  analysis_suite.rst.txt  index.rst.txt
analysis_suite/Analyzer/: Scheduler.py  analyze_task.py  apply_task.py  job_main.py  task_holder.py
analysis_suite/BDT_utilities/: MvaMaker.py
analysis_suite/Combine/: job_main.py
analysis_suite/Plotting/: configHelper.py  job_main.py  stack.py
analysis_suite/commons/: awkward_commons.py  configs.py  histogram.py  info.py  makeSimpleHtml.py
combine/python/: BuildFile.xml  job_main.py  systematics.py
commons/: __init__.py  configs.py  histogram.py  info.py
data/: .analyze_info  POG
histograms/: __init__.py  stack.py
ntuple_info/: befficiency.py  charge_misId.py  example.py  fake_rate.py  signal.py  ttzCR.py
plotInfo/: plotInfo_default.py  plotInfo_mva.py
scripts/: beff.py  calculate_fr.py  calculate_misId.py  combine.py  convert_fakerates.py  create_lists.py  era_hadd.py  fake_rate_helper.py  farmoutJob.py  farmoutJob.sh  getTriggerEff.py  get_files_hdfs.sh  hadd.py  hadd.sh  helper_functions.sh  hyperopt.py  plot_hyperparams.py  resubmit.py  run_combine.sh
(+154 files in other folders)
