[tool.poetry]
name = "analysis_suite"
version = "0.1.0"
description = "Suite for making and plotting histograms"
authors = ["Dylan Teague <dteague@cern.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
awkward1 = "^0.2.37"
pyarrow = "^1.0.1"
boost-histogram = "^0.10.2"
matplotlib = "^3.3.2"

# Analysis Code
uproot4 = { version = "^0.0.17", optional = true}
numba = { version = "^0.51.0", optional = true}
anytree = { version = "^2.8.0", optional = true}
#setuptools = {"^50.3.0", optional = true}
scipy = { version = "^1.5.2", optional = true}

# Plotting Code
prettytable = { version = "^0.7.2", optional = true}
mplhep = { version = "^0.1.36", optional = true}

# MVA code
xgboost = { version = "^1.2.0", optional = true}
sklearn = { version = "^0.0", optional = true}
pandas = { version = "^1.1.2", optional = true}
#uproot = {"^3.12.0", optional = true}

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"

[tool.poetry.extras]
analysis = ["uproot4", "numba", "anytree", "scipy"]
plotting = ["prettytable", "mplhep"]
mva = ["xgboost", "sklearn", "pandas"]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
