[tool.poetry]
name = "analysis_suite"
version = "0.1.0"
description = "Suite for making and plotting histograms"
authors = ["Dylan Teague <dteague@cern.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
awkward1 = "^0.2.37"
pyarrow = "^1.0.1"
atomic = "^0.7.3"

# Mixed
matplotlib = { version = "^3.3.2", optional = true }

# Analysis Code
uproot4 = { version = "^0.0.17", optional = true}
numba = { version = "^0.51.0", optional = true}
anytree = { version = "^2.8.0", optional = true}
#setuptools = {"^50.3.0", optional = true}

# Plotting Code
prettytable = { version = "^0.7.2", optional = true}
mplhep = { version = "^0.1.36", optional = true}

# MVA code
xgboost = { version = "^1.2.0", optional = true}
boost-histogram = { version = "^0.11.1", optional = true }
sklearn = { version = "^0.0", optional = true}
pandas = { version = "^1.1.2", optional = true}

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"
argcomplete = "^1.12.1"
memory-profiler = "^0.58.0"

[tool.poetry.extras]
analysis = ["uproot4", "numba", "anytree"]
plotting = ["prettytable", "mplhep", "scipy", "boost-histogram", "matplotlib"]
mva = ["xgboost", "sklearn", "pandas", "scipy", "matplotlib"]
all = ["xgboost", "sklearn", "pandas", "prettytable", "mplhep", "uproot4", "numba", "anytree", "scipy", "matplotlib"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
